--- a/Styles/quiz_Home.css
+++ b/Styles/quiz_Home.css
@@ -1,14 +1,58 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=DynaPuff:wght@400;700&family=Inclusive+Sans&family=Work+Sans:wght@200;300;500&display=swap');
+
+
 * {
     padding: 0;
     margin: 0;
-    color: #ffff;
 }
 
 body {
-    display: flex;
-    justify-content: center;
+    
     background-color: #181818;
-    font-family: Helvetica, sans-serif;
+    font-family: "Insclusive Sans", sans-serif;
+}
+
+
+.cab-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #000000;
+}
+
+
+.logoimg {
+    max-width: 30%;
+    border-radius: 90%;
+    margin: 25px 35px;
+    image-rendering: optimizeQuality;
+}
+
+.link-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: space-between;
+}
+.link-box ol {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style: none;
+}
+
+
+.link-box li {
+    margin: 0px 25px;
+    color: #ffffff;
+}
+
+.link-box :any-link {
+    text-decoration: none;
+    color: #ffffff;
 }
 
 
@@ -25,20 +69,23 @@ body {
 
     border: 2px solid #023047;
     box-shadow: 0 0 2px 2px #8d99ae;
+    background-image: url('https://images2.alphacoders.com/104/thumb-1920-1049543.jpg');
+    background-size: 150%;
 }
 
 .ttl-box {
     font-size: 1.5rem;
-    font-family: cursive;
+    font-family: "DynaPuff", cursive;
     font-weight: 500;
+    color: #fb8500;
 }
 
 .question-box {
     margin: 1rem 0rem;
     padding: 5px;
-    color: #fb8500;
+    color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 500;
 }
 
@@ -65,6 +112,7 @@ body {
 
     font-size: 0.7rem;
     font-weight: 500;
+    color: #ffffff;
 }
 .asw-btt:hover {
     font-size: 110%;
@@ -82,7 +130,7 @@ body {
     gap: 20px;
 }
 
-#stt-btt {
+.stt-btt {
     padding: 10px 40px;
     
     background-color: #023047;
@@ -91,11 +139,12 @@ body {
 
     font-size: 0.8rem;
     font-weight: 500;
+    color: #ffffff;
     cursor: pointer;
     transition: filter 0.2;
 
 }
-#stt-btt:hover {
+.stt-btt:hover {
     font-weight: 500;
     color: #023047;
     
@@ -103,10 +152,10 @@ body {
     box-shadow: 0 0 2px 2px #ffffff ;
     border: none;
     border-radius: 10px;
-    filter: brightness(0.8);
+    
 }
 
-#nxt-btt {
+.nxt-btt {
     padding: 10px 40px;
     
     background-color: #023047;
@@ -115,9 +164,10 @@ body {
 
     font-size: 0.8rem;
     font-weight: 500;
+    color: #ffffff;
 }
 
-#nxt-btt:hover {
+.nxt-btt:hover {
     font-weight: 500;
     color: #023047;
     
@@ -125,7 +175,24 @@ body {
     box-shadow: 0 0 2px 2px #ffffff ;
     border: none;
     border-radius: 10px;
-    filter: brightness(0.8);
+    
+}
+
+
+.ftt-box {
+    padding: 10px;
+    margin: 1rem 0rem;
+    color: #ffffff;
+    background-color: #000000;
+
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 0.5rem;
+
 }
 
 .hide {
