--- a/Styles/quiz_Home.css
+++ b/Styles/quiz_Home.css
@@ -9,32 +9,40 @@
 
 body {
     
-    background-color: #181818;
+    background-color: #353535;
     font-family: "Insclusive Sans", sans-serif;
 }
 
 
 .cab-box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    background-color: #000000;
+    background-color: #202020;
+}
+
+.icon-box {
+    margin: 1rem 0rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 
 .logoimg {
-    max-width: 30%;
+    max-width: 20%;
     border-radius: 90%;
-    margin: 25px 35px;
+    border: solid 2px #fb8500;
     image-rendering: optimizeQuality;
 }
 
 .link-box {
+    margin: 1.5rem 0rem;
+
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: flex-end;
     justify-content: space-between;
 }
 .link-box ol {
@@ -46,8 +54,23 @@ body {
 
 
 .link-box li {
+    padding: 10px;
     margin: 0px 25px;
+   
+   
     color: #ffffff;
+    border: 2px solid #fb8500;
+    border-radius: 10px;
+}
+.link-box li:hover {
+    padding: 10px;
+    margin: 0px 25px;
+
+    font-weight: 500;
+    color: #ffffff;
+    background-color: #fb8500;
+    border-radius: 10px;
+    transition: 0.4s;
 }
 
 .link-box :any-link {
@@ -57,20 +80,19 @@ body {
 
 
 .main-content {
-    height: 80vh;
+    height: 60vh;
     width: auto;
-    max-width: 750px;
     padding: 15px 25px;
-    margin: 2rem 0rem;
+    margin: 2rem 1rem;
+    
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     border: 2px solid #023047;
     box-shadow: 0 0 2px 2px #8d99ae;
-    background-image: url('https://images2.alphacoders.com/104/thumb-1920-1049543.jpg');
-    background-size: 150%;
+    background-color:#101010;
 }
 
 .ttl-box {
