Att- Pjquiz - EndGame function

--- a/Styles/quiz_Home.css
+++ b/Styles/quiz_Home.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;1,400&family=Onest:wght@100;200;300;400&family=Pixelify+Sans:wght@400;500;600&display=swap');
 
 
@@ -8,49 +7,39 @@
 }
 
 body {
-    
+
     background-color: #252422;
     font-family: "Onest", sans-serif;
 }
 
 
 .cab-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #403d39;
-}
-
-
-.ttl-cab {
-    margin: 0.5rem 0rem;
-    padding: 5px 15px;
+    margin: 30px 0px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-
-    font-size: 1.5rem;
-    font-family: 'Pixelify Sans', cursive;
-    font-weight: 200;
-    color: #eb5e28;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
+
+
 .icon-box {
-    margin: 0.5rem 0rem;
+    margin: 0rem -10rem;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 
 .logoimg {
-    max-width: 20%;
+    height: 30%;
+    width: 30%;
+
     border-radius: 90%;
-    border: solid 2px #fb8500;
     image-rendering: optimizeQuality;
 }
 
@@ -62,6 +51,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 .link-box ol {
     display: flex;
     flex-direction: row;
@@ -73,18 +63,21 @@ body {
 .link-box li {
     padding: 10px;
     margin: 0px 25px;
-   
-   font-size: 0.8rem;
+
+    font-size: 0.8rem;
     color: #fffcf2;
+
     border: 2px solid #fb8500;
     border-radius: 10px;
 }
+
 .link-box li:hover {
     padding: 10px;
     margin: 0px 25px;
 
     font-weight: 500;
     color: #fffcf2;
+
     background-color: #fb8500;
     border-radius: 10px;
     transition: 0.4s;
@@ -101,20 +94,21 @@ body {
     width: auto;
     padding: 15px 25px;
     margin: 2rem 1rem;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 
-    background-color: #403d39 ;
-    box-shadow:  1px 1px #eb5e28;
-    background-color:#403d39;
+    background-color: #403d39;
+    box-shadow: 1px 1px #eb5e28;
+    background-color: #403d39;
     border-radius: 10px;
 }
 
 .ttl-box {
     margin: 2rem 0rem;
+
     font-size: 1.2rem;
     font-family: "Pixelify sans", cursive;
     font-weight: 200;
@@ -124,8 +118,9 @@ body {
 .question-box {
     margin: 1rem 0rem;
     padding: 5px;
+
     color: #fffcf2;
-    font-family: 'Onest', sans-serif ;
+    font-family: 'Onest', sans-serif;
     font-size: 0.5rem;
     font-weight: 300;
 }
@@ -133,17 +128,17 @@ body {
 .answers-box {
     margin: 1rem 0rem;
     padding: 10px 50px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
-    background-color: #252422;
+
     border-radius: 10px;
-    font-family:  'Onest', sans-serif ;    
+    font-family: 'Onest', sans-serif;
 }
 
-.asw-btt {
+.asw-btt:not(:disabled) {
     margin: 10px 0px;
     padding: 10px 20px;
 
@@ -155,7 +150,8 @@ body {
     font-family: 'Onest', sans-serif;
     color: #101010;
 }
-.asw-btt:not(:disabled):hover {
+
+.asw-btt:hover {
     font-size: 110%;
     transition: 0.3s;
 
@@ -164,8 +160,8 @@ body {
 }
 
 .asw-btt:disabled {
-   cursor: not-allowed;
-   background-color: #7a2300; 
+    cursor: not-allowed;
+    background-color: #570f0d;
 }
 
 
@@ -178,7 +174,7 @@ body {
 
 .stt-btt {
     padding: 10px 40px;
-    
+
     background-color: #fffcf2;
     border: none;
     border-radius: 10px;
@@ -187,24 +183,24 @@ body {
     font-weight: 500;
     color: #eb5e28;
     cursor: pointer;
-    transition: filter 0.2;
 
 }
+
+
 .stt-btt:hover {
     font-weight: 500;
     color: #101010;
-    
+
     background-color: #fb8500;
-    box-shadow: 0 0 1px 2px #ffffff ;
     border: none;
     border-radius: 10px;
-    
+
 }
 
 .nxt-btt {
     padding: 10px 40px;
     margin: 1rem 0rem;
-    
+
     background-color: #fffcf2;
     border: none;
     border-radius: 10px;
@@ -217,18 +213,19 @@ body {
 .nxt-btt:hover {
     font-weight: 500;
     color: #101010;
-    
+
     background-color: #fb8500;
-    box-shadow: 0 0 1px 2px #ffffff ;
+    box-shadow: 0 0 1px 2px #ffffff;
     border: none;
     border-radius: 10px;
-    
+
 }
 
 
 .ftt-box {
     padding: 10px;
     margin: 1rem 0rem;
+
     color: #eb5e28;
     background-color: #403d39;
 
@@ -257,17 +254,44 @@ body {
     color: #eb5e28;
 }
 
-.status-box h1 {
-    font-size: 1rem;
+.status-box h3 {
     margin: 0.5rem 0rem;
     padding: 10px 0px;
+
+    font-size: 1rem;
 }
 
 
 .status-box p {
-    font-size: 0.8rem;
     margin: 0.5rem 0rem;
+
+    font-size: 0.8rem;
     color: #fffcf2;
+}
+
+.fns-btt {
+    padding: 10px 40px;
+
+    background-color: #fffcf2;
+    border: none;
+    border-radius: 10px;
+
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: #eb5e28;
+    cursor: pointer;
+
+}
+
+
+.fns-btt:hover {
+    font-weight: 500;
+    color: #101010;
+
+    background-color: #fb8500;
+    border: none;
+    border-radius: 10px;
+
 }
 
 
@@ -277,7 +301,7 @@ body {
 }
 
 .incorrect-asw {
-    background-color: #742202 ;
+    background-color: #db0f0f;
     color: #101010;
 }
 
