--- a/Styles/quiz_Home.css
+++ b/Styles/quiz_Home.css
@@ -7,8 +7,8 @@
 }
 
 body {
-
-    background-color: #06141b;
+    display: flexbox;
+    background-color: #404258;
     font-family: "Onest", sans-serif;
 }
 
@@ -20,14 +20,17 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    border-bottom: solid 2px #4a5c6a;
+    
+    
+    border-radius: 5px;
+    border-bottom: solid 2px #eb5e28;
 }
 
 
 
 
 .icon-box {
-    margin: 0.5rem 1rem;
+    margin: 0rem 0.8rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -39,8 +42,8 @@ body {
 
 
 .logoimg {
-    height: 20%;
-    width: 25%;
+    height: 30%;
+    width: 30%;
 
 
     image-rendering: optimizeQuality;
@@ -64,8 +67,8 @@ body {
 
 
 .link-box li {
-    padding: 10px;
-    margin: 0px 25px;
+    padding: 8px 20px;
+    margin: 0px 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -73,21 +76,21 @@ body {
     font-size: 0.8rem;
     color: #fb8500;
 
-    background-color: #4a5c6a;
+    background-color: #50577A;
     border-radius: 5px;
+    transition: 0.4ms;
+    
 }
 
 
 .link-box li:hover {
-    padding: 10px;
-    margin: 0px 25px;
+    padding: 8px 20px;
+    margin: 0px 10px;
 
     font-weight: 500;
-    color: #4a5c6a;
-
-    background-color: #fb8500;
+   
     border-radius: 5px;
-    transition: 0.5s;
+    filter: brightness(0.5)
 }
 
 .link-box :any-link {
@@ -103,7 +106,7 @@ body {
 
 .main-content {
     height: auto;
-    width: auto;
+    max-width: 600px;
     padding: 15px 25px;
     margin: 2rem 1rem;
 
@@ -112,8 +115,7 @@ body {
     justify-content: space-around;
     align-items: center;
 
-    background-color: #11212d;
-    box-shadow: 1px 1px 0.5 #eb5e28;
+    background-color: #474E68;
     border-radius: 10px;
 }
 
@@ -152,21 +154,21 @@ body {
     margin: 10px 0px;
     padding: 10px 20px;
 
-    background: none;
-    border: solid 2px #eb5e28;
-    border-radius: 10px;
+    background-color: #27374D;
+    border: none;
+    border-radius: 5px;
 
     font-size: 0.8rem;
     font-family: 'Onest', sans-serif;
-    color: #ffffff;
+    color: whitesmoke;
 }
 
 .asw-btt:hover {
     font-size: 110%;
-    transition: 0.3s;
+    transition: 0.6s;
 
     background-color: #eb5e28;
-    color: #101010;
+    color: #ffffff;
 }
 
 .asw-btt:disabled {
@@ -183,10 +185,10 @@ body {
 }
 
 .stt-btt {
-    padding: 10px 40px;
+    padding: 5px 40px;
 
-    background: none;
-    border: solid 2px #eb5e28;
+    background-color: #50577A;
+    border: none;
     border-radius: 10px;
 
     font-size: 0.8rem;
@@ -194,18 +196,20 @@ body {
     color: #ffffff;
     cursor: pointer;
 
+    transition: 0.5s;
+
 }
 
 
 .stt-btt:hover {
-    font-weight: 500;
+    font-weight: 700;
     color: #ffffff;
 
     background-color: #fb8500;
     border: none;
     border-radius: 10px;
 
-    transition: 0.2s;
+    
 
 }
 
@@ -213,24 +217,24 @@ body {
     padding: 10px 40px;
     margin: 1rem 0rem;
 
-    background: none;
-    border: solid 2px #eb5e28;
+    background-color: #50577A;
+    border: none;
     border-radius: 10px;
 
     font-size: 0.8rem;
-    font-weight: bold;
+    font-weight: 500;
     color: #ffffff;
 }
 
 .nxt-btt:hover {
-    font-weight: bold;
+    font-weight: 700;
     color: #101010;
 
     background-color: #fb8500;
     border: none;
     border-radius: 10px;
 
-    transition: 0.2s;
+    transition: 0.5s;
 
 }
 
@@ -239,19 +243,25 @@ body {
     padding: 10px;
     margin: 1rem 0rem;
 
-    color: #eb5e28;
-    background-color: #11212d;
+    color: #ffffff;
+    background-color: #474E68;
 
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
-    font-size: 0.5rem;
 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.6rem;
+
+}
+
+.ftt-box h2 {
+    font-style: italic;
+    font-size: 0.8rem;
+    color: #27374D;
 }
 
 .status-box {
@@ -283,7 +293,7 @@ body {
 }
 
 .form-user-info {
-    background-color: #11212d;
+    background-color: #474E68;
     color: whitesmoke;
     border-radius: 10px;
 
@@ -305,13 +315,13 @@ body {
     text-align: left;
     align-items: center;
     justify-content: center;
-    box-shadow: 1px 1px 0px #fb8500;
+    box-shadow: 0px 1px 10px 1px  #27374D ;
     border-radius: 5px;
 
 }
 
 .title-form h2 {
-    color: #eb5e28;
+    color: #f1f1f1;
     font-size: 1.2rem;
 
 }
@@ -323,7 +333,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background-color: #06141b;
+    background-color: #27374D;
     border-radius: 8px;
 }
 
@@ -337,7 +347,7 @@ body {
     height: 20px;
     max-width: 400px;
 
-    border: solid 1px #4a5c6a;
+    border: solid 1px #404258;
     background: none;
     border-radius: 5px;
     color: whitesmoke;
@@ -356,8 +366,8 @@ body {
     margin: 0.5rem 0rem;
     padding: 5px 10px;
 
-    background: none;
-    border: solid 1px #eb5e28;
+    background-color: #50577A;
+    border: none;
     border-radius: 10px;
 
     font-size: 0.7rem;
@@ -386,8 +396,8 @@ body {
 .fns-btt {
     padding: 10px 40px;
 
-    background: none;
-    border: solid 2px #eb5e28;
+    background-color: #50577A;
+    border: none;
     border-radius: 10px;
 
     font-size: 0.8rem;
@@ -399,14 +409,14 @@ body {
 
 
 .fns-btt:hover {
-    font-weight: 500;
+    font-weight: 700;
     color: #101010;
 
     background-color: #fb8500;
     border: none;
     border-radius: 10px;
 
-    transition: 0.2s;
+    transition: 0.4s;
 
 }
 
