--- a/QuizKAge/Styles/quiz_Home.css
+++ b/QuizKAge/Styles/quiz_Home.css
@@ -7,30 +7,30 @@
 }
 
 body {
-    display: flexbox;
-    background-color: #404258;
+
+    background-color: #121212;
     font-family: "Onest", sans-serif;
 }
 
 
 .cab-box {
-    margin: 0.8rem 0rem;
+    margin: 2rem 0rem;
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    
-    
+
+
     border-radius: 5px;
-    border-bottom: solid 2px #eb5e28;
+    border-bottom: solid 2px #ff5733;
 }
 
 
 
 
 .icon-box {
-    margin: 0rem 0.8rem;
+    margin: 1rem 0.8rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -42,8 +42,9 @@ body {
 
 
 .logoimg {
-    height: 30%;
-    width: 30%;
+    height: 20%;
+    width: 20%;
+    border-radius: 50%;
 
 
     image-rendering: optimizeQuality;
@@ -67,28 +68,28 @@ body {
 
 
 .link-box li {
-    padding: 8px 20px;
+    padding: 5px 15px;
     margin: 0px 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 
     font-size: 0.8rem;
-    color: #fb8500;
+    color: #ff5733;
 
-    background-color: #50577A;
+    background-color: #666564;
     border-radius: 5px;
     transition: 0.4ms;
-    
+
 }
 
 
 .link-box li:hover {
-    padding: 8px 20px;
+    padding: 5px 15px;
     margin: 0px 10px;
 
     font-weight: 500;
-   
+
     border-radius: 5px;
     filter: brightness(0.5)
 }
@@ -104,18 +105,51 @@ body {
     margin: 0px 4px;
 }
 
-.main-content {
-    height: auto;
-    max-width: 600px;
-    padding: 15px 25px;
-    margin: 2rem 1rem;
+.Secao-Principal {
+    display: grid;
+    padding: 30px;
+    grid-template-columns: 1fr 2fr ;
+    grid-template-rows: 20vh 80vh 10vh;
+    grid-template-areas: "Titulo1 ArtBody1"
+        "ConteudoQuiz ConteudoQuiz"
+        "Rodape Rodape ";
+
+    gap: 20px 25px;
+    align-items: normal;
+}
+
+
+.Tit-1 {
+
+    grid-area: "Titulo1";
+    text-align: right;
+    font-family: "Pixelify", cursive;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #db0f0f;
+
+    margin: 1rem 0rem;
+    padding: 10px;
+
+
+    box-shadow: 1px 1px 1px #30a966;
+    border-radius: 5px;
+
+}
+
+.Conteudo-Principal {
+    grid-area: "ConteudoQuiz";
+    padding: 30px;
+    margin: 2rem 0.5rem;
 
     display: flex;
+    justify-self: center;
     flex-direction: column;
     justify-content: space-around;
+    align-self: flex-end;
     align-items: center;
 
-    background-color: #474E68;
+    background-color: #1d1d1d;
     border-radius: 10px;
 }
 
@@ -124,7 +158,7 @@ body {
 
     font-family: "Onest", sans-serif;
     font-weight: 200;
-    color: #fb8500;
+    color: #ff5733;
 }
 
 .question-box {
@@ -133,7 +167,7 @@ body {
 
     color: #fffcf2;
     font-family: 'Onest', sans-serif;
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     font-weight: 300;
 }
 
@@ -154,7 +188,7 @@ body {
     margin: 10px 0px;
     padding: 10px 20px;
 
-    background-color: #27374D;
+    background-color: #666564;
     border: none;
     border-radius: 5px;
 
@@ -167,7 +201,7 @@ body {
     font-size: 110%;
     transition: 0.6s;
 
-    background-color: #eb5e28;
+    background-color: #ff5733;
     color: #ffffff;
 }
 
@@ -187,7 +221,7 @@ body {
 .stt-btt {
     padding: 5px 40px;
 
-    background-color: #50577A;
+    background-color: #666564;
     border: none;
     border-radius: 10px;
 
@@ -205,11 +239,11 @@ body {
     font-weight: 700;
     color: #ffffff;
 
-    background-color: #fb8500;
+    background-color: #ff5733;
     border: none;
     border-radius: 10px;
 
-    
+
 
 }
 
@@ -217,7 +251,7 @@ body {
     padding: 10px 40px;
     margin: 1rem 0rem;
 
-    background-color: #50577A;
+    background-color: #666564;
     border: none;
     border-radius: 10px;
 
@@ -230,7 +264,7 @@ body {
     font-weight: 700;
     color: #101010;
 
-    background-color: #fb8500;
+    background-color: #ff5733;
     border: none;
     border-radius: 10px;
 
@@ -239,14 +273,14 @@ body {
 }
 
 
-.ftt-box {
+.Rodape {
     padding: 10px;
     margin: 1rem 0rem;
 
     color: #ffffff;
-    background-color: #474E68;
+    background-color: #1c1c1c;
 
-
+    grid-area: "Rodape";
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -261,7 +295,7 @@ body {
 .ftt-box h2 {
     font-style: italic;
     font-size: 0.8rem;
-    color: #27374D;
+    color: #707070;
 }
 
 .status-box {
@@ -293,7 +327,7 @@ body {
 }
 
 .form-user-info {
-    background-color: #474E68;
+    background-color: #1c1c1c;
     color: whitesmoke;
     border-radius: 10px;
 
@@ -315,7 +349,7 @@ body {
     text-align: left;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 1px 10px 1px  #27374D ;
+    box-shadow: 0px 1px 10px 1px #27374D;
     border-radius: 5px;
 
 }
@@ -333,7 +367,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background-color: #27374D;
+    background-color: #303030;
     border-radius: 8px;
 }
 
@@ -347,7 +381,7 @@ body {
     height: 20px;
     max-width: 400px;
 
-    border: solid 1px #404258;
+    border: solid 1px #707070;
     background: none;
     border-radius: 5px;
     color: whitesmoke;
@@ -359,14 +393,14 @@ body {
     margin-top: 0.5rem;
 
     font-size: 0.8em;
-    color: #eb5e28;
+    color: #ff5733;
 }
 
 .form-btt {
     margin: 0.5rem 0rem;
     padding: 5px 10px;
 
-    background-color: #50577A;
+    background-color: #666564;
     border: none;
     border-radius: 10px;
 
@@ -382,7 +416,7 @@ body {
     font-weight: 500;
     color: #ffffff;
 
-    background-color: #fb8500;
+    background-color: #ff5733;
     border: none;
     border-radius: 10px;
 
@@ -396,7 +430,7 @@ body {
 .fns-btt {
     padding: 10px 40px;
 
-    background-color: #50577A;
+    background-color: #666564;
     border: none;
     border-radius: 10px;
 
@@ -412,7 +446,7 @@ body {
     font-weight: 700;
     color: #101010;
 
-    background-color: #fb8500;
+    background-color: #ff5733;
     border: none;
     border-radius: 10px;
 
