--- a/ESt-JS/Styles/P-Inical.css
+++ b/ESt-JS/Styles/P-Inical.css
@@ -4,87 +4,108 @@ body {
     margin: 0;
     padding: 0;
 
-    background-color: rgb(0, 0, 0, 0.9);
+    background-color: #000103;
 
     font-family: "Hedvig Letters Sans", sans-serif;
-    color: aliceblue;
+    color: #FFFFFF;
 }
 
 /*Caixa Principal*/
 .Conteudo-Principal {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minman(300px, 1fr));
-    grid-template-areas: "Cabecalho Cabecalho Cabecalho"
-        "Form-User Cont-Principal Cont-Principal"
-        "Rodape Rodape Rodape";
-    gap: 10px;
-    place-items: stretch;
-    place-content: center / space-around;
-
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 210px), 2fr));
+    grid-template-rows: repeat(auto-fit, minmax(min(100%, 100px), max(100%, 300px)));
+    gap: 20px;
 
 }
 
 /*Cabeçalho-Menu*/
 .Cabecalho {
-    margin: 10px 0px;
-    margin-bottom: 1rem;
-    background-color: #202020;
+    margin: 15px 0px;
+    margin-bottom: 1.5rem;
+
+
     display: grid;
-    grid-area: "Cabecalho";
+    grid-template-columns: 100px 1fr 1fr 1fr;
     grid-column-start: 1;
-    grid-column-end: 4;
-    place-content: space-around center;
-    place-items: center;
+    grid-column-end: end;
+    place-content: center space-around;
+    place-items: stretch;
+
+    background-color: #101010;
 }
 
 .Titulo-Cab {
-    margin: 0.8rem 0rem;
-    align-self: center;
-    justify-self: center;
+    margin: 0.8rem 0.8rem;
+    display: grid;
+    grid-column: 1 / 2;
 }
 
 .Titulo-Cab img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 
+
+.Lista-Links {
+    margin: 0rem 0.5rem;
+
+    list-style: none;
+    text-decoration: none;
+    text-decoration: none;
+
+    display: grid;
+    grid-column: 2 / span 4;
+    place-content: center;
+    justify-self: end;
+
+}
 
 .LL-Lista {
     list-style: none;
-    display: flex;
+    text-decoration: none;
 
-}
-
-.LL-Lista :any-link {
+    padding: 10px;
     display: flex;
     flex-direction: row;
-    padding: 5px 10px;
-    text-decoration: none;
-    color: aliceblue;
-    transition: 0.4s;
-
+    
 }
 
-.LL-Lista :any-link:hover {
-    background-color: #FF312E;
-    border-radius: 10px;
-    padding: 5px 20px;
+.Cab-Menu-Item :any-link {
+    list-style: none;
     text-decoration: none;
-    color: aliceblue;
+    letter-spacing: 1.5px;
+    padding: 5px 15px;
+    margin:  10px;
+    background-color: #222222;
+    color: #e2504e;
+    border-radius: 5px;
+    font-size: 12px;
+    transition: 0.3s;
 }
+
+
+.Cab-Menu-Item a:hover {
+    border-radius: 5px;
+    background-color: #e2504e;
+    color: #101010;
+    filter: contrast(1.2);
+}
+
 
 /*Formulário-Usuário*/
 .Form-User {
-    margin: 0.2rem 0.5rem;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    background-color: #2b2b2b;
+    margin: 0rem 0.5rem;
+    margin-bottom: 0.8rem;
+    background-color: #101010;
     border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-row: 2 / 3;
+    place-content: start stretch;
+    place-items: center stretch;
 }
 
 .Form-User i {
@@ -92,26 +113,24 @@ body {
 }
 
 .Form-Campos {
-    margin: 0.5rem 0.5rem;
+    margin: 0.5rem;
     padding: 10px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    display: grid;
+    place-content: center;
 
-    background-color: #202020;
+    background-color: #151515;
     border-radius: 5px;
-    color: #FF312E;
     font-size: 0.8rem;
 }
 
 .Form-Campos input {
     margin: 0.5rem 0rem;
     padding: 5px;
-    background-color: #707070;
+    background-color: #242323;
     border: none;
     border-radius: 5px;
-    color: black;
+    color: aliceblue;
 }
 
 .Form-User-Titulo {
@@ -126,85 +145,108 @@ body {
     align-self: baseline;
     text-align: start;
     font-family: "Raleway", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    color: #e2504e;
 }
 
 .Btt-Form-User {
-    margin: 0.5rem 0.8rem;
+    margin: 0.5rem 0rem;
     padding: 10px 10px;
-
-    display: flex;
-    justify-content: center;
 
     border: none;
     border-radius: 10px;
-    background-color: #707070;
+    background-color: #242323;
+    color: #FFFFFF;
 }
 
 .Btt-Form-User:hover {
-    filter: brightness(0.5)
+    background-color: #FF312E;
+    font-size: 110%;
+    filter: brightness(0.8);
+    transition: 0.4s;
+}
+
+/*Banner*/
+
+
+
+.Banner-Imc img {
+    margin-bottom: 10px;
+    height: auto;
+    width: auto;
+    border-radius: 5px;
+
 }
 
 
 /*Formulário-Imc*/
 .Imc-Principal {
 
-    margin-right: 0.5rem;
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    margin: 0rem 0.5rem;
+
+    grid-column: 2 / end;
+    gap: 5px;
     border-radius: 5px;
-    place-items: center space-around;
+    place-items: center;
     place-content: center;
 
 }
 
 .Imc-Titulo {
     text-align: start;
-
-    place-content: start;
-
-    color: #FF312E;
+    color: #e2504e;
     font-family: "Raleway", sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold;
 }
 
-.Imc-Inputs {
+.Titulo-Form2 {
+    color: #e2504e;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: "Helvetica", sans-serif;
+}
 
-    margin: 0.5rem 0rem;
-    padding: 10px 10px;
+.Imc-Form-Campos {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 10px;
+
+    display: grid;
+    place-content: center;
 
     font-size: 0.8rem;
-    font-weight: bold;
 
-    background-color: #202020;
+    background-color: #151515;
     border-radius: 5px;
 }
 
 /*ìcones-formulário-IMC*/
-.Imc-Inputs i {
+.Imc-Campos i {
     margin: 0rem 0.2rem;
+    color: #e2504e;
 }
 
-.Imc-Inputs input {
+.Imc-Campos {
     margin: 0.5rem 0rem;
     padding: 5px;
-    background-color: #707070;
+    border: none;
+    border-radius: 10px;
+    background-color: #242323;
+    color: #FFFFFF;
+}
+
+.Imc-Campos input {
+    padding: 5px;
+    background-color: #151515;
     border: none;
     border-radius: 5px;
-    color: rgb(248, 249, 250);
+    color: #FFFFFF;
 }
 
 
 .Btt-Form-Imc {
 
-    margin: 0.8rem 0rem;
+    margin-top: 1.2rem;
     padding: 10px 15px;
 
     display: flex;
@@ -212,40 +254,64 @@ body {
 
     border: none;
     border-radius: 10px;
-    background-color: #707070;
+    background-color: #242323;
     transition: 0.4s;
+    color: #FFFFFF;
 
+}
+
+.Btt-Form-Imc i {
+    margin: 0px 0.4rem;
+    color: #e2504e;
 }
 
 .Btt-Form-Imc:hover {
     background-color: #FF312E;
     border-radius: 10px;
+    filter: brightness(0.8);
 
 }
 
 
 .Resp-Imc {
     margin: 0.8rem 0rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 18px;
+    font-size: 15px;
+    text-align: left;
+    color: aliceblue;
+    line-height: 105%;
+    place-content: center;
+    place-items: center;
 
+}
+
+.enfase {
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    color: #FF312E;
+    filter: contrast(1.2);
 }
 
 
 
 /*Texto-Imc*/
 .Artigo-Texto1 {
-    margin: 4rem 0rem;
-    font-size: 14px;
+    margin: 1rem 0rem;
+    padding: 15px;
+    background-color: #151515;
+    border-radius: 5px;
+    font-size: 12px;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 
 }
 
 .Artigo-Texto1-Titulo {
     margin: 1rem 0rem;
-    font-size: 25px;
+    font-size: 20px;
+
+    color: #FF312E;
 
 }
 
@@ -259,12 +325,11 @@ body {
 /*Rodape*/
 .Rodape {
     margin-top: 0.8rem;
-
     display: grid;
-    grid-area: "Rodape";
+    place-content: center;
     grid-column-start: 1;
-    grid-column-end: 4;
-    background-color: #2b2b2b;
+    grid-column-end: end;
+    background-color: #101010;
 }
 
 .Texto-Rodape {
